[workspace]
members = ["expect-json", "expect-json-macros"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4.42"
email_address = "0.2.9"
num = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.145"
typetag = "0.2.21"
thiserror = "2.0.17"
uuid = "1.18.1"
regex = "1.12.2"

proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"

pretty_assertions = "1.4.1"
rstest = "0.26.1"

# For Documentation
axum = "0.8.4"
axum-test = { version = "18.0.0-rc3", path = "../axum-test" }

[replace]
# This allows us perform doc tests using local crate with Axum Test
"expect-json:1.1.0" = { path = "./expect-json" }
