[workspace]
members = ["expect-json", "expect-json-macros"]
resolver = "2"

[workspace.dependencies]
expect-json = { version = "1.8.1", path = "./expect-json" }
expect-json-macros = { version = "1.8.1", path = "./expect-json-macros" }

chrono = "0.4.42"
email_address = "0.2.9"
num = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.148"
typetag = "0.2.21"
thiserror = "2.0.17"
uuid = "1.19.0"
regex = "1.12.2"

proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = "2.0.111"

pretty_assertions = "1.4.1"
rstest = "0.26.1"

# For Documentation
axum = "0.8.8"
axum-test = { version = "18.4.1", path = "../axum-test" }
