[package]
name = "expect-json-macros"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
version = "1.4.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
description = "Macros for Expect Json"
repository = "https://github.com/JosephLenton/expect-json"
documentation = "https://docs.rs/expect-json-macros"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
