[package]
name = "expect-json"
description = "For comparisons on JSON data"
documentation = "https://docs.rs/expect-json"
readme = "../README.md"

authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
publish.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
expect-json-macros = { workspace = true }

chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
email_address = { workspace = true }
serde_json = { workspace = true }
typetag = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
num = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
axum = { workspace = true, features = [] }
axum-test = { workspace = true }
rstest = { workspace = true }
